docs: Clarify password reset uses Token/Link (not OTP), add comprehensive guide